--- a/main.css
+++ b/main.css
@@ -29,6 +29,8 @@
     grid-area: numbers;
     background-color: rgba(0, 0, 0, 0.1);
     display: flex;
+    width: 100%;
+    overflow-x: auto;
 }
 
 .math-operation{
